--- a/Czech/main/FileExplorer.apk/res/values-cs/strings.xml
+++ b/Czech/main/FileExplorer.apk/res/values-cs/strings.xml
@@ -727,4 +727,9 @@ Bylo přičteno dalších %1$s"</string>
   <string name="tab_app">Více</string>
   <string name="text_select_all">Vše</string>
   <string name="text_select_nothing">Odznačit</string>
+  <string name="app_function">Spravujte soubory ve vašem zařízení</string>
+  <string name="error_file_already_exists">Tento soubor již existuje</string>
+  <string name="function_file_operation">"Pro přístup a otevírání souborů; "</string>
+  <string name="function_set_private">"Pro prohlížení a šifrování souborů; "</string>
+  <string name="function_use_imei">"Pro přístup k OMEI a šifrování souborů; "</string>
 </resources>
