--- a/Czech/main/FileExplorer.apk/res/values-cs/strings.xml
+++ b/Czech/main/FileExplorer.apk/res/values-cs/strings.xml
@@ -731,5 +731,5 @@ Bylo přičteno dalších %1$s"</string>
   <string name="error_file_already_exists">Tento soubor již existuje</string>
   <string name="function_file_operation">"Pro přístup a otevírání souborů; "</string>
   <string name="function_set_private">"Pro prohlížení a šifrování souborů; "</string>
-  <string name="function_use_imei">"Pro přístup k OMEI a šifrování souborů; "</string>
+  <string name="function_use_imei">"Pro přístup k IMEI a šifrování souborů; "</string>
 </resources>
