--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -6000,4 +6000,8 @@ You can view generated logs in File Manager."</string>
   <string name="select_time_format_title">Formát času</string>
   <string name="handy_mode_tips_full_screen">Při využívání gest pro celou obrazovku, můžete zapnout režim Ovládání jednou rukou pomocí Quick ballu. Kdykoli můžete také přepnout mezi gesty pro celou obrazovku a použitím tlačítek zobrazených na displeji.</string>
   <string name="status_bar_settings_show_weather">Zobrazit informace o počasí v roletce</string>
+     <string name="color_led_charging_summary">Bude vypnutá po nabití baterie</string>
+     <string name="color_led_game_mode_summary">Zobrazit efekty pro hry během Zrychlení  her</string>
+     <string name="color_led_special_scene_title">Speciální efekty</string>
+     <string name="color_led_summary">Nefunguje během režimu Nerušit</string>
 </resources>
