--- a/Czech/main/MiSound.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiSound.apk/res/values-cs/strings.xml
@@ -84,4 +84,55 @@
   <string name="music_mi_effect_title">Dirac HD Sound</string>
   <string name="music_title_dolby_control">Dolby Digital Plus</string>
   <string name="music_unsupport_effect_summary">Nepodporovaná USB sluchátka</string>
+    <string name="add_sound">Přidat vlastní nastavení</string>
+     <string name="apply_sound">Použít</string>
+     <string name="can_you_here">Poslechnout zvuk?</string>
+     <string name="complete_dialog_button">Rozumím</string>
+     <string name="complete_dialog_message">Úspešne jste dokončili test.</string>
+     <string name="complete_dialog_title">Výsledek testu</string>
+     <string name="customization_complete">Hotovo</string>
+     <string name="customization_continue">Pokračovat</string>
+     <string name="customization_pause_tip">Ukončit test? Připojte sluchátka pro pokračování.</string>
+     <string name="customization_quit">Ukončit</string>
+     <string name="first_note">Otestujte své sluchové vnímání a podle toho upravte hlasitost.</string>
+     <string name="four_note">Test bude trvat přibližně 3 minuty.</string>
+     <string name="heard_no">Ne</string>
+     <string name="heard_yes">Ano</string>
+     <string name="hearing_of_left_ear">Levé ucho</string>
+     <string name="hearing_of_right_ear">Pravé ucho</string>
+     <string name="high_pitch">Vysoká špička</string>
+     <string name="input_head_set">Nasaďte si sluchátka</string>
+     <string name="keep_sound">Uložit nastavení</string>
+     <string name="low_pitch">Nízká špička</string>
+     <string name="music_add_my_sound">Přidat vlastní nastavení</string>
+     <string name="music_below_thirty_years">Do 30 roků</string>
+     <string name="music_customized_sound_summary">Přizpůsobte hlasitost podle svého sluchového vnímání</string>
+     <string name="music_customized_sound_title">Úprava hlasitosti</string>
+     <string name="music_delete">Vymazat</string>
+     <string name="music_delete_sound_title">Vymazání nastavení</string>
+     <string name="music_open_customized_sound_summary">Přizpůsobte hlasitost podle svého sluchového vnímání</string>
+     <string name="music_open_customized_sound_title">Úprava hlasitosti</string>
+     <string name="music_please_input_head_set">Nejprve připojte sluchátka</string>
+     <string name="music_rename">Přejmenovat</string>
+     <string name="music_rename_for_sound">Přejmenovat toto nastavení</string>
+     <string name="music_save">Uložit</string>
+     <string name="music_sound">Nastavení</string>
+     <string name="music_sound_for_mine">Vlastní nastavení</string>
+     <string name="music_sound_num">Vlastní nastavení %s</string>
+     <string name="music_sound_sample">Systémové nastavení</string>
+     <string name="music_sure_to_delete_sound_msg">Vymazat vybrané nastavení?</string>
+     <string name="music_thirty_to_sixty_years">30-60 roků</string>
+     <string name="music_upper_sixty_years">Více jak 60 roků</string>
+     <string name="name">Název</string>
+     <string name="now_here">A nyní?</string>
+     <string name="original_sound">Přehrát originální zvuk</string>
+     <string name="personal_sound">Přehrát s použitým nastavením</string>
+     <string name="retry_test">Spustit znova</string>
+     <string name="save_and_apply">Uložit a použít</string>
+     <string name="second_note">Nasaďte si sluchátka.</string>
+     <string name="sound_test_title">Test sluchového vnímání</string>
+     <string name="start_test_sound">Spustit test</string>
+     <string name="sure_give_up_test">Příště budete muset začít odznova pokud přerušíte tento test. Ukončit?</string>
+     <string name="sure_to_back">Vymazat změny?</string>
+     <string name="third_note">Najděte tiché místo.</string>
 </resources>
