--- a/Czech/main/MiuiGallery.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiGallery.apk/res/values-cs/strings.xml
@@ -1651,4 +1651,72 @@
   <string name="assistant_page_discovery">Objevujte</string>
   <string name="assistant_page_server_error">Zkontrolujte nastavení sítě</string>
   <string name="movie_customer_unsupport_audio_file">Nepodporovaný audio soubor</string>
+     <string name="datetimepicker_dialog_title">Změnit čas</string>
+     <string name="datetimepicker_updatetime_failed">Nebylo možné změnit čas</string>
+     <string name="datetimepicker_updatetime_success">Čas je změněný</string>
+     <string name="editphoto_datetime_needdownload_origin_subtitle">Stáhněte originální soubor z MiCloud pro změnu času.</string>
+     <string name="editphoto_datetime_needdownload_origin_title">Stáhnout originál</string>
+     <string name="filter_single_sky">Obloha</string>
+     <string name="friday">Pátek</string>
+     <string name="friday_short">Pá</string>
+     <string name="friday_shortest">P</string>
+     <string name="monday">Pondělí</string>
+     <string name="monday_short">Pon</string>
+     <string name="monday_shortest">P</string>
+     <string name="month_april">Duben</string>
+     <string name="month_april_short">Dub</string>
+     <string name="month_april_shortest">D</string>
+     <string name="month_august">Srpen</string>
+     <string name="month_august_short">Srp</string>
+     <string name="month_august_shortest">S</string>
+     <string name="month_december">Prosinec</string>
+     <string name="month_december_short">Pro</string>
+     <string name="month_december_shortest">P</string>
+     <string name="month_february">Únor</string>
+     <string name="month_february_short">Úno</string>
+     <string name="month_february_shortest">Ú</string>
+     <string name="month_january">Leden</string>
+     <string name="month_january_short">Led</string>
+     <string name="month_january_shortest">L</string>
+     <string name="month_july">Červenec</string>
+     <string name="month_july_short">Čvc</string>
+     <string name="month_july_shortest">Č</string>
+     <string name="month_june">Červen</string>
+     <string name="month_june_short">Čer</string>
+     <string name="month_june_shortest">Č</string>
+     <string name="month_march">Březen</string>
+     <string name="month_march_short">Bře</string>
+     <string name="month_march_shortest">B</string>
+     <string name="month_may">Květen</string>
+     <string name="month_may_short">Kvě</string>
+     <string name="month_may_shortest">K</string>
+     <string name="month_november">Listopad</string>
+     <string name="month_november_short">Lis</string>
+     <string name="month_november_shortest">L</string>
+     <string name="month_october">Říjen</string>
+     <string name="month_october_short">Říj</string>
+     <string name="month_october_shortest">Ř</string>
+     <string name="month_september">Září</string>
+     <string name="month_september_short">Zář</string>
+     <string name="month_september_shortest">Z</string>
+     <string name="saturday">Sobota</string>
+     <string name="saturday_short">Sob</string>
+     <string name="saturday_shortest">S</string>
+     <string name="screen_editor_btn_delete">Vymazat</string>
+     <string name="screen_editor_btn_save">Uložit</string>
+     <string name="screen_editor_delete_dialog_msg">Vymazat tento screenshot?</string>
+     <string name="special_type_hdr">HDR</string>
+     <string name="sunday">Neděle</string>
+     <string name="sunday_short">Ned</string>
+     <string name="sunday_shortest">N</string>
+     <string name="thursday">Čtvrtek</string>
+     <string name="thursday_short">Čtv</string>
+     <string name="thursday_shortest">Č</string>
+     <string name="tomorrow">Zítra</string>
+     <string name="tuesday">Úterý</string>
+     <string name="tuesday_short">Úte</string>
+     <string name="tuesday_shortest">Ú</string>
+     <string name="wednesday">Středa</string>
+     <string name="wednesday_short">Stř</string>
+     <string name="wednesday_shortest">S</string>
 </resources>
