--- a/Czech/main/VpnDialogs.apk/res/values-cs/strings.xml
+++ b/Czech/main/VpnDialogs.apk/res/values-cs/strings.xml
@@ -7,7 +7,7 @@
   <string name="disconnect">Odpojit</string>
   <string name="duration">Doba trvání:</string>
   <string name="legacy_title">Žádost o připojení</string>
-  <string name="prompt">Aplikace %s se pokouší připojit k síti VPN.</string>
+  <string name="prompt">Aplikace se pokouší připojit k síti VPN.</string>
   <string name="session">Relace:</string>
   <string name="warning">Pokračováním souhlasíte s tím, že aplikace může sledovat veškerý váš síťový provoz. Pokud aplikaci nedůvěřujete, nepokračujte. V opačném případě riskujete vystavení vašich dat škodlivému softwaru.</string>
 </resources>
