--- a/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
@@ -791,4 +791,5 @@ Objekt bude ostrý na rozmazaném pozadí."</string>
      <string name="wideselfie_rotate_to_left_slowly">Natočte telefon doleva</string>
      <string name="wideselfie_rotate_to_right_slowly">Natočte telefon doprava</string>
   <string name="lying_direct_hint">Aktuální orientace</string>
+    <string name="pref_camera_snap_entry_summary">Podržte tlačítkem pro Snížení hlasitosti pokud je vypnutý displej pro pořízením fotografie</string>
 </resources>
