--- a/Czech/main/DeskClock.apk/res/values-cs/strings.xml
+++ b/Czech/main/DeskClock.apk/res/values-cs/strings.xml
@@ -257,4 +257,45 @@
      <string name="no_alarm_setting">Žádné budíky</string>
      <string name="no_worldclock">Žádné hodiny</string>
      <string name="search_menu_title">Vyhledat</string>
+     <string name="confirm">Potvrdiť</string>
+  <string name="life_post_setting_open_background_subtitle">Zobrazit pozadí pro budíky</string>
+  <string name="life_post_setting_open_background_title">zobrazit pozadí</string>
+  <string name="life_post_setting_open_summary">Zobrazit informace o počasí pro první vypnutý budík mezi 4:00 a 10:00</string>
+  <string name="listen_news_privacy">Aplikace Hodiny vyžaduje připojení k síti. Před používáním této aplikace musíte souhlasit s našimi Podmínkami používání a Ochranou soukromí. Souhlasíte?</string>
+  <string name="module_dialog_negative">Ne</string>
+  <string name="module_dialog_neutral">Rozumím</string>
+  <string name="module_dialog_positive">Souhlasím</string>
+  <string name="module_download_failure">Nebylo možné stáhnout zvuky. Zkontrolujte nastavení sítě.</string>
+  <string name="module_weather_ringtone_download_data">Počasí budíku vybere různé melodie pro buzení dle aktuálního počasí. Je třeba stáhnout ≈30MB dodatečných dat. Pokračovat?</string>
+  <string name="module_weather_ringtone_download_data_privacy">Počasí budíku vybere různé melodie pro buzení dle aktuálního počasí. Je třeba stáhnout ≈30MB dodatečných dat. Pokračovat?</string>
+  <string name="module_weather_ringtone_download_wifi">Počasí budíku vybere různé melodie pro buzení dle aktuálního počasí. Je třeba stáhnout ≈30MB dodatečných dat. Pokračovat?</string>
+  <string name="module_weather_ringtone_download_wifi_privacy">Počasí budíku vybere různé melodie pro buzení dle aktuálního počasí. Je třeba stáhnout ≈30MB dodatečných dat. Pokračovat?</string>
+  <string name="module_weather_ringtone_introduce_global">Počasí budíku vybere různé melodie pro buzení dle aktuálního počasí.</string>
+  <string name="module_weather_ringtone_update_data">Počasí budíku vybere různé melodie pro buzení dle aktuálního počasí. Je třeba stáhnout ≈30MB dodatečných dat. Pokračovat?</string>
+  <string name="module_weather_ringtone_update_success">Počasí budíku vybere různé melodie pro buzení dle aktuálního počasí. Můžete to nastavit v nastaveních Hodin.</string>
+  <string name="module_week_ringtone_download_data">Týdenní budík přehrává různé zvuky přírody každý den. Je třeba stáhnout ≈30MB dodatečných dat. Pokračovat?</string>
+  <string name="module_week_ringtone_download_data_privacy">Týdenní budík přehrává různé zvuky přírody každý den. Je třeba stáhnout ≈30MB dodatečných dat. Před používáním této aplikace musíte souhlasit s našimi Podmínkami používání a Ochranou soukromí. Souhlasíte?</string>
+  <string name="module_week_ringtone_download_wifi">Týdenní budík přehrává různé zvuky přírody každý den. Je třeba stáhnout ≈30MB dodatečných dat. Pokračovat?</string>
+  <string name="module_week_ringtone_download_wifi_privacy">Týdenní budík přehrává různé zvuky přírody každý den. Je třeba stáhnout ≈30MB dodatečných dat. Před používáním této aplikace musíte souhlasit s našimi Podmínkami používání a Ochranou soukromí. Souhlasíte?</string>
+  <string name="module_week_ringtone_introduce">Týdenní budík přehrává různé zvuky přírody každý den.</string>
+  <string name="module_week_ringtone_update_data">Týdenní budík přehrává různé zvuky přírody každý den. Je třeba stáhnout ≈30MB dodatečných dat. Pokračovat?</string>
+  <string name="module_week_ringtone_update_success">Týdenní budík přehrává různé zvuky přírody každý den. Můžete to nastavit v nastaveních Hodin.</string>
+  <string name="module_white_noise_download_data">Časovač vyžaduje stažení zvukových souborů. Je třeba stáhnout ≈30MB dodatečných dat. Pokračovat?</string>
+  <string name="module_white_noise_download_data_privacy">Časovač vyžaduje stažení zvukových souborů. Je třeba stáhnout ≈30MB dodatečných dat. Před používáním této aplikace musíte souhlasit s našimi Podmínkami používání a Ochranou soukromí. Souhlasíte?</string>
+  <string name="module_white_noise_download_wifi">Časovač vyžaduje stažení zvukových souborů. Je třeba stáhnout ≈30MB dodatečných dat. Pokračovat?</string>
+  <string name="module_white_noise_download_wifi_privacy">Časovač vyžaduje stažení zvukových souborů. Je třeba stáhnout ≈30MB dodatečných dat. Před používáním této aplikace musíte souhlasit s našimi Podmínkami používání a Ochranou soukromí. Souhlasíte?</string>
+  <string name="network_privacy">Aplikácia Hodiny vyžaduje připojení na internet pro stažení aktuálních informací o svátcích a volných dnech. Před používáním této aplikace musíte souhlasit s našimi Podmínkami používání a Ochranou soukromí. Souhlasíte?</string>
+  <string name="network_privacy_global">Aplikace Hodiny vyžaduje připojení na internet. Před používáním této aplikace musíte souhlasit s našimi Podmínkami používání a Ochranou soukromí. Souhlasíte?</string>
+  <string name="privacy_policy_title">Ochrana soukromí</string>
+  <string name="ringtone_other">více zvonění</string>
+  <string name="ringtone_weather">Vyzvánění pro počasí budíku</string>
+  <string name="ringtone_week">Vyzvánění pro týdenní budík</string>
+  <string name="setting_alarm_arriving_subtitle">Zobrazit upozornění před ukončením budíku</string>
+  <string name="shutdown_alarm_alert_enable_summary">Budík vypnutí bude spuštěn alespoň 10 minut po vypnutí zařízení</string>
+  <string name="shutdown_alarm_alert_title">Budík vypnutí</string>
+  <string name="system_permission_phone_desc">Pro rozpoznání různých zařízení</string>
+  <string name="system_permission_purpose">Budíky, stopky, odpočet, světové hodiny</string>
+  <string name="system_permission_storage_desc">Pro přístup k vyzvánění</string>
+  <string name="timer_alert_type_spring_rain">Letní déšť</string>
+  <string name="volume_button_setting_desc">Přiřadit funkce k tlačítkům Zapínání a Hlasitosti</string>
 </resources>
