--- a/Czech/main/MiuiHome.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiHome.apk/res/values-cs/strings.xml
@@ -366,5 +366,20 @@
   <string name="shake_to_align_icons_summary">Protřepejte zařízením během úpravy plochy pro vyplnění prázdných buněk</string>
   <string name="shake_to_align_icons_title">Potřepáním zaplňte prázdné buňky</string>
   <string name="system_shortcuts_more_operation">Info o aplikaci</string>
-    <string name="no_space_toast_when_click_widget">Není dostatek místa na této ploše.</string>  
+  <string name="no_space_toast_when_click_widget">Není dostatek místa na této ploše.</string>  
+  <string name="all_apps">Všechny aplikace</string>
+  <string name="all_apps_no_search_results">Nic se nenašlo</string>
+  <string name="all_apps_search_app">Vyhledat aplikace</string>
+  <string name="all_apps_search_market_message">Vyhledat online</string>
+  <string name="all_apps_setting_desktop_desc">Zobrazit všechny nainstalované aplikace na ploše. Podržte ikonu aplikace pro zobrazení dostupných zkratek.</string>
+  <string name="all_apps_setting_desktop_title">Běžné</string>
+  <string name="all_apps_setting_drawer_desc">Umístit všechny nainstalované aplikace do seznamu aplácií který zobrazíte zatažením nahoru.</string>
+  <string name="all_apps_setting_drawer_tips_desc">Seznam aplikací zobrazíte tažením nahoru na ploše. Chcete přepnout do seznamu aplikací?</string>
+  <string name="all_apps_setting_drawer_tips_title">Použít Seznam aplikací</string>
+  <string name="all_apps_setting_drawer_title">Se seznamem aplikací</string>
+  <string name="all_apps_setting_title">Plocha</string>
+  <string name="all_apps_slide_up_tips">Potažení nahoru otevře seznam aplikací.</string>
+  <string name="all_apps_suggestions">Návrh aplikací</string>
+  <string name="recent_apps">Nedávné</string>
+  <string name="remove_invalidate_gadget_tips">Jeden z widgetů které používáte není dostupný. Můžete přidat jiný.</string>
 </resources>
