--- a/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
@@ -792,4 +792,6 @@ Objekt bude ostrý na rozmazaném pozadí."</string>
      <string name="wideselfie_rotate_to_right_slowly">Natočte telefon doprava</string>
   <string name="lying_direct_hint">Aktuální orientace</string>
     <string name="pref_camera_snap_entry_summary">Podržte tlačítkem pro Snížení hlasitosti pokud je vypnutý displej pro pořízením fotografie</string>
+     <string name="accessibility_ultra_pixel_photography_off">%s Ultra HD je vypnuté</string>
+     <string name="accessibility_ultra_pixel_photography_on">%s Ultra HD je zapnuté</string>
 </resources>
