--- a/Czech/main/ThemeManager.apk/res/values-cs/strings.xml
+++ b/Czech/main/ThemeManager.apk/res/values-cs/strings.xml
@@ -584,4 +584,16 @@ ale obsah, který hledáte, není dostupný ve Vaší zemi."</string>
      <string name="wallpaper_online_no_more">To je všechno</string>
      <string name="wallpaper_online_tip">Připojte se k síti pro načtení více položek</string>
      <string name="wallpaper_static">Statické</string>
+     <string name="author_attention">Sledovat</string>
+  <string name="author_attention_success">Sledování nastaveno</string>
+  <string name="author_dialog_message">Zrušit sledování?</string>
+  <string name="author_dynamic">Stav</string>
+  <string name="author_dynamic_no_resource">Nic nebylo nalezeno</string>
+  <string name="detail_author_attention_head">Sledujte někoho z našich designérů</string>
+  <string name="detail_author_fans">"Sledující: "</string>
+  <string name="detail_author_works">"Položky: "</string>
+  <string name="resource_apply_trial">Použít</string>
+  <string name="resource_download_trial">Zkusit</string>
+  <string name="wallpaper_no_favorite">Žádné položky.</string>
+  <string name="wallpaper_no_record">Žádné položky.</string>  
 </resources>
